# demiurge-rust

./: .gitignore  Cargo.toml  README.md  core.db
docs/: essence-economy.md  geography.md  pop-mechanics.md  underreal.md
docs/superpowers/specs/: 2026-06-11-climate-map-design.md  2026-06-11-hex-grid-design.md  2026-06-11-world-map-design.md  2026-06-11-world-simulation-architecture.md
examples/: heatmap_export.rs
src/: bio.rs  common.rs  data.rs  dom_cult_reg.rs  lib.rs  main.rs  mortal.rs  polis.rs  universe.rs
