[package]
name = "demiurge-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
rusqlite = { version = "0.40.1", features = ["bundled"] }
slotmap = "1.1.1"
uuid = { version = "1", features = ["v4", "serde"] }
noise = "0.9.0"
image = "0.25.10"
font8x8 = "0.3"

